Added clickjacking test

--- a/templates/session/buy.html.twig
+++ b/templates/session/buy.html.twig
@@ -66,7 +66,17 @@
 
     <div class="ui segment">
         <resource>
-            Ataque CSRF: <a href="https://www.uco.es/users/sergio/csrf-attack/" class="ui link">Prueba de ataque CSRF</a>
+            <ul>
+                <li>
+                    Ataque CSRF: <a href="https://www.uco.es/users/sergio/attacks-demo/csrf-attack/" class="ui link">Prueba de ataque CSRF</a>
+                </li>
+                <li>
+                    Ataque ClickJacking: <a target="_blank" href="https://www.uco.es/users/sergio/attacks-demo/clickjacking/index.php" class="ui link">Prueba de ataque ClickJacking</a>
+                </li>
+                <li>
+                    Mostrar ataque ClickJacking: <a target="_blank" href="https://www.uco.es/users/sergio/attacks-demo/clickjacking/index.php?show" class="ui link">Prueba de ataque ClickJacking</a>
+                </li>
+            </ul>
         </resource>
     </div>
 {% endblock %}
